2015-March-23 Struan Robertson

	* SensitivityAnalysis.cpp: Minor change to write out standard deviation
	of predicted quantity.

	* ...\examples\i-propyl - SA\pentyl_isomerization_SA.xml: New example
	added.

2015-March-18 Chris Morley

    * src/plugins/SensitivityAnalysis.cpp: 
    
      changed XML names to initial lc, e.g. me:sensitivityAnalysisSamples
      (but not R_Squared) and gave all the elements me: prefixes.
    
      made <me:sensitivityVarRedMethod> an optional input with a hard-wired
      default = RATIOCONTROL.
    
      moved output <me:R_Squared> to be child of <me:sensitivityAnalysisTable>

    * examples\i-propyl - SA\ipropyl_SA.xml, schemas\mesmerPlugins.xsd: update

    * defaults.xml: added defaults need checking

    * mesmer1.xsl: improved formatting for Sensitivity Analysis output.

2015-March-16 Chris Morley

    * src/gDensityOfStates.cpp,src/gDensityOfStates.h: correct algorithm for
    conversion between computational and thermodynamic. Correct units handling
    in ConvertEnergyConvention().

    * mesmer1.xsl: display for Sensitivity Analysis (unfinished)

2015-March-11 Chris Morley

    * src/gDensityOfStates.cpp: add missing NULL test.  
    
    * src/plugins/ThermodynamicTable.cpp: clear does not empty stringstreams!

    * defaults.xml: add missing default for me:ZPE

    * src/gStructure.cpp: bug in gStructure::GetConstituentAtomThermo()
      NOT YET FIXED 

2015-March-07 Struan Robertson

	* SensitivityAnalysis.cpp: Implementation of both additive and ration control
	variate methods for	variance reduction.

2015-March-04 Struan Robertson

	* SensitivityAnalysis.cpp: Initial implementation of additive control variate 
	method for variance reduction.

2015-March-03 Struan Robertson

	* SensitivityAnalysis.cpp: Refactoring of main sensitivity analysis method.

2015-March-01 Struan Robertson

	* Documentation: Updated "What's New".

2015-March-01 Struan Robertson
