@@ -250,25 +250,25 @@
   <reactionList>
     <reaction id="R1">
       <reactant>
-        <molecule ref="allene" me:type="modelled" />
+        <molecule ref="allene" role="modelled" />
       </reactant>
       <product>
-        <molecule ref="cyclopropene" me:type="modelled" />
+        <molecule ref="cyclopropene" role="modelled" />
       </product>
       <me:transitionState>
-        <molecule ref="TS1" me:type="transitionState" />
+        <molecule ref="TS1" role="transitionState" />
       </me:transitionState>
       <me:MCRCMethod name="SimpleRRKM" />
     </reaction>
     <reaction id="R2">
       <reactant>
-        <molecule ref="cyclopropene" me:type="modelled" />
+        <molecule ref="cyclopropene" role="modelled" />
       </reactant>
       <product>
-        <molecule ref="propyne" me:type="modelled" />
+        <molecule ref="propyne" role="modelled" />
       </product>
       <me:transitionState>
-        <molecule ref="TS3" me:type="transitionState" />
+        <molecule ref="TS3" role="transitionState" />
       </me:transitionState>
       <me:MCRCMethod name="SimpleRRKM"/>
     </reaction>
