@@ -268,6 +268,7 @@
       <xs:element name="printGrainTransitionStateFlux" minOccurs="0"/>
       <xs:element name="printReactionOperatorColumnSums" minOccurs="0"/>
       <xs:element name="printInitialDistribution" minOccurs="0"/>
+      <xs:element name="printPhenomenologicalEvolution" minOccurs="0"/>
       <xs:element name="printSpeciesProfile" minOccurs="0"/>
       <xs:element name="printTabbedMatrices" minOccurs="0"/>
       <xs:element name="printTSsos" minOccurs="0"/>
