@@ -442,6 +442,7 @@
           <xs:element name="sensitivityAnalysisOrder" type="xs:integer" minOccurs="0"/>
           <xs:element name="sensitivityNumVarRedIters" type="xs:integer" minOccurs="0"/>
           <xs:element name="sensitivityVarRedMethod" type="xs:string" minOccurs="0"/>
+          <xs:element name="sensitivityAnalysisTables" minOccurs="0"/>
         </xs:all>
       </xs:extension>
     </xs:complexContent>
